tests/closure/apply_not_enough_inputs.ca.output
Error occurred:
[tests/closure/apply_not_enough_inputs.ca:7,0] Closure.apply() | Too few inputs, expected 3, received 2
(input 0) | 1

