tests/closure/apply_not_enough_inputs.ca

cl = {
    print(input() ', ' input() ', ' input())
}


cl.apply([1 2])
